hard-gists/783810/run.log
=== Docker Run Log for 783810 ===
Started at: Mi 29. Okt 17:19:47 CET 2025

[2025-10-29 17:19:47] START: Running container for 783810
[2025-10-29 17:19:47] SUCCESS: Container e00453fcaa0197ca61b0d9c3a9b35689633ceb5099638b07969e8af33d928722 started for 783810
=== Container logs for 783810 ===
  File "/snippet.py", line 62
    except __zmq__.ZMQError, e:
           ^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 783810 ===
[2025-10-29 17:19:49] INFO: Container e00453fcaa0197ca61b0d9c3a9b35689633ceb5099638b07969e8af33d928722 has stopped
